--- a/src/WebUI/ClientApp/src/app/Invoice/components/invoice.component.html
+++ b/src/WebUI/ClientApp/src/app/Invoice/components/invoice.component.html
@@ -7,7 +7,9 @@
 <alert type="warning" *ngIf="!NoinvalidInvoicesExist">
   <strong>Warning!</strong> One or more invoices are invalid.
 </alert>
+
 <button class="btn btn-success validate-button" (click)="validateInvoices()">Validate Invoices</button>
+<button class="btn btn-success validate-button float-right" (click)="addEmptyRow()">+</button>
 
 <table class="mat-elevation-z8" mat-table [dataSource]="dataSource">
   <!-- Id -->
@@ -16,9 +18,9 @@
   <!-- Invoice Number -->
   <ng-container matColumnDef="invoiceNumber">
     <th mat-header-cell *matHeaderCellDef> Invoice Number </th>
-    <td mat-cell *matCellDef="let invoice" >
+    <td mat-cell *matCellDef="let invoice">
       <mat-form-field floatLabel="never">
-        <input enter-div modifiedInvoice="invoice" matInput [value]="invoice.invoiceNumber" [(ngModel)]="invoice.invoiceNumber" />
+        <input enter-div [modifiedInvoice]="invoice" matInput [value]="invoice.invoiceNumber" [(ngModel)]="invoice.invoiceNumber" />
       </mat-form-field>
     </td>
   </ng-container>
@@ -26,9 +28,9 @@
   <!-- Amount -->
   <ng-container matColumnDef="amount">
     <th mat-header-cell *matHeaderCellDef> Amount </th>
-    <td mat-cell *matCellDef="let invoice" [ngClass]="{'highlight': invoice.amount >100}">
+    <td mat-cell *matCellDef="let invoice; let row" [ngClass]="{'highlight': invoice.amount >100}">
       <mat-form-field floatLabel="never" [ngClass]="{'highlight': invoice.amount >100}">
-        <input enter-div [modifiedInvoice]="invoice" matInput [value]="invoice.amount"  [(ngModel)]="invoice.amount" />
+        <input enter-div [modifiedInvoice]="invoice" matInput [value]="invoice.amount" [(ngModel)]="invoice.amount" />
       </mat-form-field>
     </td>
   </ng-container>
@@ -37,8 +39,8 @@
   <ng-container matColumnDef="department">
     <th mat-header-cell *matHeaderCellDef> Department </th>
     <td mat-cell *matCellDef="let invoice">
-      <mat-form-field appearance="outline" >
-        <mat-select [value]="invoice.department" >
+      <mat-form-field appearance="outline">
+        <mat-select enter-div [modifiedInvoice]="invoice" [value]="invoice.department" [(ngModel)]="invoice.department">
           <mat-option class="mat-select-panel" *ngFor="let dep of departments" [value]="dep">{{dep}}</mat-option>
         </mat-select>
       </mat-form-field>
